--- a/pfa-client-next/styles/globals.css
+++ b/pfa-client-next/styles/globals.css
@@ -12,3 +12,48 @@
 input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
   -webkit-transition-delay: 9999s;
 }
+
+.DayPicker {
+  @apply text-sm !important;
+}
+
+.DayPicker-Month {
+  border-collapse: separate;
+}
+.DayPicker-WeekNumber {
+  outline: none;
+}
+.DayPicker-Day {
+  outline: none;
+  border: 1px solid transparent;
+}
+.DayPicker-Day--hoverRange {
+  background-color: #60605c !important;
+}
+
+.DayPicker-Day--selectedRange {
+  background-color: #fff7ba !important;
+  border-top-color: #FFEB3B;
+  border-bottom-color: #FFEB3B;
+  border-left-color: #fff7ba;
+  border-right-color: #fff7ba;
+}
+
+.DayPicker-Day--selectedRangeStart {
+  background-color: #FFEB3B !important;
+  border-left: 1px solid #FFEB3B;
+}
+
+.DayPicker-Day--selectedRangeEnd {
+  background-color: #FFEB3B !important;
+  border-right: 1px solid #FFEB3B;
+}
+
+.DayPicker-Day--selectedRange:not(.DayPicker-Day--outside).DayPicker-Day--selected,
+.DayPicker-Day--hoverRange:not(.DayPicker-Day--outside).DayPicker-Day--selected {
+  border-radius: 0 !important;
+  color: black !important;
+}
+.DayPicker-Day--hoverRange:hover {
+  border-radius: 0 !important;
+}
