--- a/pfa-client-next/styles/globals.css
+++ b/pfa-client-next/styles/globals.css
@@ -57,3 +57,24 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 .DayPicker-Day--hoverRange:hover {
   border-radius: 0 !important;
 }
+
+.transition-bar-enter {
+  opacity: 0.01;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.transition-bar-enter-active {
+  opacity: 1;
+  transform: scaleX(1);
+  transition: all 300ms ease-in;
+  transform-origin: left;
+}
+.transition-bar-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.transition-bar-exit-active {
+  opacity: 0.01;
+  transform: translate(0, 10px);
+  transition: all 300ms ease-out;
+}
